# Stats-Parser

./: .gitignore  README.md  api.py  demo_usage.py  pyproject.toml  test.ipynb
examples/: demo_usage.py
src/: api.py  battle_report.py  bonus_overview.py  error_messages.py  ocr.py  schemas.py  utils.py
src/schemas/: __init__.py  errors.py  inputs.py  outputs.py
tests/: test.ipynb  test_report_reader.ipynb
