[project]
name = "stat-parser"
version = "0.1.0"
description = "Uses OCR to read stats from images of stats in the game Whiteout Survival."
readme = "README.md"
requires-python = "==3.11.10"
dependencies = [
    "easyocr>=1.7.2",
    "fastapi>=0.116.1",
    "ipykernel>=6.30.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.6",
    "opencv-python>=4.12.0.88",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "pytesseract>=0.3.13",
    "requests>=2.32.4",
    "torchaudio",
    "torchvision",
    "uvicorn>=0.35.0",
]

# [[tool.uv.index]]
# url = "https://download.pytorch.org/whl/cpu"


[tool.uv]
index-strategy = "unsafe-best-match"
